# Advanced-Testing-Training

./: Makefile  pyproject.toml  setup.cfg
extend_test/: check_shutil_work.py  extend_test.py
tests/: test_extend_test.py
tests/fixtures/: after.html
